--- a/error.html
+++ b/error.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error - GitHub Profile Viewer</title>
+    <title>404 Not Found - GitHub Profile Viewer</title>
     <style>
         body {
             font-family: 'Poppins', Tahoma, Geneva, Verdana, sans-serif;
             background: #fff;
-            color: #ecf0f1;
+            color: #000;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -29,35 +29,38 @@
 
         h1 {
             color: #e74c3c;
-            font-size: 2em;
-            margin-bottom: 10px;
+            font-size: 3em;
+            margin-bottom: 20px;
         }
 
         p {
             color: #333;
-            font-size: 1.2em;
-            margin-bottom: 20px;
+            font-size: 1.5em;
+            margin-bottom: 30px;
             font-weight: 500;
         }
 
         .back-button {
             display: inline-block;
-            padding: 5px 10px;
+            padding: 10px 20px;
             background-color: #3498db;
             color: #fff;
             text-decoration: none;
-            border-radius: 4px;
-            font-size: 1.2em;
+            border-radius: 5px;
+            font-size: 1.5em;
         }
 
-        .back-button:hover {
-            background-color: #3498db;
+        .error-text {
+            font-size: 2em;
+            color: #000;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 
 <body>
     <div class="error-container">
+        <div class="error-text">404 Not Found</div>
         <h1>Oops! Something Went Wrong</h1>
         <p>It seems there was an error.</p>
         <a href="index.html" class="back-button">Back to Home</a>
