--- a/error.html
+++ b/error.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Not Found - GitHub Profile Viewer</title>
+    <title>404 Not Found</title>
     <style>
         body {
             font-family: 'Poppins', Tahoma, Geneva, Verdana, sans-serif;
@@ -61,8 +61,7 @@
 <body>
     <div class="error-container">
         <div class="error-text">404 Not Found</div>
-        <h1>Oops! Something Went Wrong</h1>
-        <p>It seems there was an error.</p>
+        <p>The username you entered might be incorrect</p>
         <a href="index.html" class="back-button">Back to Home</a>
     </div>
 </body>
